# james-shell

./: Cargo.toml  README.md  err.txt  setup.sh  somefile.txt
docs/: module-00-foundations.md  module-01-repl-loop.md  module-02-parsing.md  module-03-execution.md  module-04-builtins.md  module-05-expansion.md  module-06-redirection.md  module-07-pipes.md  module-08-job-control.md  module-09-signals.md  module-10-line-editing.md  module-11-scripting.md  module-12-advanced.md  module-13-testing.md  module-14-structured-types.md  module-15-typed-pipelines.md  module-16-data-parsers.md  module-17-completions.md  module-18-error-handling.md  module-19-modern-scripting.md  module-20-plugins.md  module-21-diagnostics.md  module-22-output-and-config.md  phase3-hardening-checklist.md  progress.md  reference-architecture.md  reference-cheatsheet.md  reference-crates.md  reference-glossary.md  reference-resources.md  syllabus.md
src/: ast.rs  builtins.rs  editor.rs  executor.rs  expander.rs  job_control.rs  jobs.rs  lib.rs  main.rs  parser.rs  redirect.rs  script_parser.rs  status.rs
tests/: editor_integration.rs  job_control_regressions.rs  phase1_regressions.rs  signal_handling.rs
