[package]
name = "james-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28" # Cross-platform terminal raw mode, cursor control, key events
ctrlc = "3"        # Cross-platform Ctrl-C (SIGINT) handling
glob = "0.3"       # Wildcard/pathname expansion
os_pipe = "1"      # Cross-platform OS pipes for pipeline plumbing

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # Unix system calls: waitpid(WUNTRACED), kill(SIGCONT), etc.
